security.tf
# security.tf

# ALB Security Group: Edit to restrict access to the application
resource "aws_security_group" "lb" {
  name        = "fiap-lanches-load-balancer-security-group"
  description = "controls access to the ALB"
  vpc_id      = aws_vpc.main.id

  ingress {
    protocol    = "tcp"
    from_port   = var.dict_port_app["conta"]
    to_port     = var.dict_port_app["conta"]
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = var.dict_port_app["product"]
    to_port     = var.dict_port_app["product"]
    cidr_blocks = ["0.0.0.0/0"]
  }

  # ingress {
  #   protocol    = "tcp"
  #   from_port   = var.dict_port_app["order"]
  #   to_port     = var.dict_port_app["order"]
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Traffic to the ECS cluster should only come from the ALB
resource "aws_security_group" "ecs_tasks" {
  name        = "fiap-lanches-ecs-tasks-security-group"
  description = "allow inbound access from the ALB only"
  vpc_id      = aws_vpc.main.id

  ingress {
    protocol        = "tcp"
    from_port       = var.dict_port_app["conta"]
    to_port         = var.dict_port_app["conta"]
    security_groups = [aws_security_group.lb.id]
  }

  ingress {
    protocol        = "tcp"
    from_port       = var.dict_port_app["product"]
    to_port         = var.dict_port_app["product"]
    security_groups = [aws_security_group.lb.id]
  }

  # ingress {
  #   protocol        = "tcp"
  #   from_port       = var.dict_port_app["order"]
  #   to_port         = var.dict_port_app["order"]
  #   security_groups = [aws_security_group.lb.id]
  # }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "database_security_group" {
  name        = "${var.app_name}-rds-postgres-sg"
  description = "Liberacao da porta 5432 para acesso ao rds postgres"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs_tasks.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Environment = "${var.app_name}-rds-postgres"
  }

  depends_on = [aws_security_group.ecs_tasks]
}

resource "aws_security_group" "kafka_security_group" {
  name        = "${var.app_name}-kafka-sg"
  description = "Liberacao da porta 9092 para acesso ao kafka"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port       = 9092
    to_port         = 9092
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs_tasks.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Environment = "${var.app_name}-kafka"
  }

  depends_on = [aws_security_group.ecs_tasks]
}
